# src/routes/orders.routes.js
@@ -6,9 +6,11 @@ import {
   getArchivedOrders,
   getOrder,
   getOrders,
+  getOrderSequence,
   searchOrder,
   unArchieve,
   updateOrder,
+  updateOrderSequence,
 } from "../controllers/orders.controller.js";
 import { Auth } from "../middlewares/auth.middleware.js";
 import { checkRole } from "../middlewares/verif.middleware.js";
@@ -17,6 +19,8 @@ const router = express.Router();
 
 router.get("/search", Auth, checkRole(["ADMIN"]), searchOrder);
 router.get("/", Auth, checkRole(["ADMIN"]), getOrders);
+router.patch("/update/orderSeq", Auth, checkRole(["ADMIN"]), updateOrderSequence)
+router.get("/get/orderSeq", Auth, checkRole(["ADMIN"]), getOrderSequence)
 router.get("/archive", Auth, checkRole(["ADMIN"]), getArchivedOrders);
 router.get("/:id", Auth, checkRole(["ADMIN"]), getOrder);
 router.post("/create", Auth, checkRole(["ADMIN"]), upload, createOrder);
